<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:paddingTop="3dp"
android:paddingBottom="5dp">

<LinearLayout
    android:id="@+id/message_body"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="4dp"
    android:paddingStart="12dp"
    android:paddingEnd="8dp"
    android:paddingTop="3dp"
    android:paddingBottom="3dp"
    android:background="@drawable/rounded_rectangle_green"
    android:orientation="vertical">

    <ImageView
        android:layout_height="120dp"
        android:layout_width="120dp"
        android:id="@+id/message_image"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:background="@drawable/rounded_rectangle_image"
        android:contentDescription="@string/todo">
    </ImageView>

    <TextView
        android:id="@+id/message"
        android:text="@string/hi_man_how_are_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="240dp"
        android:autoLink="web"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:textIsSelectable="true"
        android:textSize="14sp"/>

</LinearLayout>

<TextView
    android:id="@+id/text_message_time"
    android:text="@string/time_sample"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="10sp"
    android:layout_marginEnd="4dp"
    app:layout_constraintBottom_toBottomOf="@+id/message_body"
    app:layout_constraintRight_toLeftOf="@+id/message_body"
    tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>