<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="3dp"
    android:paddingBottom="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:elevation="12dp"
        android:id="@+id/card_view_image"
        app:cardCornerRadius="23dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/image_message_profile"
            android:src="@drawable/icons8_chatbot_64"
            android:layout_alignParentTop="true"
            android:background="@drawable/profile_bk"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo">
        </ImageView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_message_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/sheila_bot"
        android:textSize="13sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@+id/card_view_image"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/message_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_message_name"
        app:layout_constraintLeft_toRightOf="@+id/card_view_image"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:background="@drawable/rounded_rectangle_orange"
        android:orientation="vertical">

        <ImageView
            android:layout_height="120dp"
            android:layout_width="120dp"
            android:id="@+id/image"
            android:clickable="true"
            android:visibility="gone"
            android:background="@drawable/rounded_rectangle_image"
            android:contentDescription="@string/todo"
            android:focusable="true">
        </ImageView>

        <TextView
            android:id="@+id/message"
            android:text="@string/hi_man_how_are_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="220dp"
            android:autoLink="web"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"
            android:textIsSelectable="true"
            android:textSize="14sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_message_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_sample"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/message_body"
        app:layout_constraintLeft_toRightOf="@+id/message_body"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>