<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    android:background="@drawable/bg1"
    tools:context=".BotActivity">

    <include layout="@layout/content_chat_room" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_call"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.skyfishjy.library.RippleBackground
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/start_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:rb_color="@color/colorPrimaryDark"
            app:rb_radius="32dp"
            app:rb_rippleAmount="4"
            app:rb_duration="3000"
            app:rb_scale="6">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_connection"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:elevation="12dp"
                    android:layout_centerInParent="true"
                    app:cardCornerRadius="40dp"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    android:innerRadius="0dp"
                    android:padding="5dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9">

                    <ImageView
                        android:layout_height="60dp"
                        android:layout_width="60dp"
                        android:layout_margin="10dp"
                        android:id="@+id/imageViewProfile"
                        android:src="@drawable/connection2"
                        android:contentDescription="@string/todo">
                    </ImageView>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>
        </com.skyfishjy.library.RippleBackground>

        <RelativeLayout
            app:layout_constraintBottom_toTopOf="@+id/swipe_btn"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_chat"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:elevation="12dp"
                        android:layout_gravity="center"
                        app:cardCornerRadius="25dp"
                        app:cardBackgroundColor="@color/white"
                        android:innerRadius="0dp"
                        android:padding="5dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="0dp"
                        android:shape="ring"
                        android:thicknessRatio="1.9">
                        <ImageView
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:layout_margin="10dp"
                            android:src="@drawable/icon_chat"
                            android:contentDescription="@string/todo">
                        </ImageView>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:text="@string/switch_to_text_message"
                        android:textSize="10sp"
                        android:textAlignment="center"
                        android:textColor="@color/whiteTextColor"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        tools:ignore="SmallSp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:orientation="vertical"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_wait"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:elevation="12dp"
                        app:cardCornerRadius="25dp"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        android:innerRadius="0dp"
                        android:padding="5dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="0dp"
                        android:shape="ring"
                        android:thicknessRatio="1.9">
                        <ImageView
                            android:id="@+id/image_wait"
                            android:layout_height="46dp"
                            android:layout_width="46dp"
                            android:layout_margin="2dp"
                            android:src="@drawable/icon_pause"
                            android:contentDescription="@string/todo">
                        </ImageView>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:id="@+id/guide_wait"
                        android:text="@string/click_to_interrupt"
                        android:textSize="10sp"
                        android:textAlignment="center"
                        android:textColor="@color/whiteTextColor"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <com.ebanx.swipebtn.SwipeButton
            android:id="@+id/swipe_btn"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:inner_text="@string/swipe_to_start"
            app:button_image_disabled="@drawable/start_bot"
            app:button_image_enabled="@drawable/end_bot"
            app:inner_text_color="@android:color/white"
            app:inner_text_size="16sp"
            app:inner_text_top_padding="18dp"
            app:inner_text_bottom_padding="18dp"
            app:inner_text_background="@drawable/shape_rounded"
            app:button_image_height="80dp"
            app:button_image_width="80dp"
            app:button_top_padding="20dp"
            app:button_bottom_padding="20dp"
            app:button_background="@drawable/shape_button"
            app:initial_state="disabled"
            app:has_activate_state="true"
            />

        <TextView
            android:id="@+id/text_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connecting"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:textSize="18sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>