<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_color_list"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_color_list"
        android:orientation="vertical">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <include layout="@layout/item_file_shimmer" />
                <include layout="@layout/item_file_shimmer" />
                <include layout="@layout/item_file_shimmer" />
                <include layout="@layout/item_file_shimmer" />
                <include layout="@layout/item_file_shimmer" />
                <include layout="@layout/item_file_shimmer" />

            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_list"
            android:layout_below="@id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:clipToPadding="false"
                android:paddingTop="10dp"
                tools:listitem="@layout/item_notification" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/empty_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/list_empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textAlignment="center"
            android:text="@string/please_connect_with_disaster"
            android:textColor="@color/profilePrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/please_open"
            android:layout_marginBottom="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/please_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textAlignment="center"
            android:textColor="@color/profileEditTextColor"
            android:text="@string/open_this_link_on_desktop_or_laptop"
            app:layout_constraintBottom_toTopOf="@+id/link_web"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/link_web"
            android:text="@string/link_web"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/animation_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/data_observe" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>